<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ChannelActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/bannerImageView"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:background="@color/colorAccent" />

                <android.support.v7.widget.CardView
                    android:id="@+id/profileCardView"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="80dp"
                    android:layout_centerHorizontal="true">

                    <ImageButton

                        android:id="@+id/profileImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent2" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profileCardView"
                    android:layout_centerHorizontal="true"
                    android:padding="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp" />

            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:id="@+id/subsCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:background="@color/colorAccent2"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/subscriptors"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/subsTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:gravity="end|center_vertical"
                            android:text="@string/app_name"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="34sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/views"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/viewsTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:gravity="end|center_vertical"
                            android:text="@string/app_name"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="34sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/videos"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/videosTextView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:gravity="end|center_vertical"
                            android:text="@string/app_name"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="34sp" />


                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/descTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:autoLink="all"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/app_name"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="setFavorite"
        android:src="@drawable/ic_star_border"
        app:layout_anchor="@id/bannerImageView"
        app:layout_anchorGravity="bottom|end" />


</android.support.design.widget.CoordinatorLayout>
